--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-router/node": "^7.9.6",
     "@react-router/serve": "^7.9.6",
+    "cobe": "^0.6.5",
+    "gsap": "^3.14.2",
     "isbot": "^5.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
